citations added geo-records table created
